Refactor `MainMenuScreen` and `MainWindow` architecture to improve navigation and state management
- Replaced `MainViewModel` with `MainMenuViewModel` and updated all references.
- Enhanced `MainMenuScreen` with `IsFirstLaunch` logic for conditional debug behaviors.
- Simplified navigation by refactoring `GoToArcanumMenuScreenCommand_Executed` and introducing `LoadAndTransfer` method.
- Added `BaseGridSplitter` style and implemented dynamic layout adjustments with new splitters in `MainWindow`.
- Adjusted resource management in `Program.cs` and updated application shutdown mode.
- Added assets for layout visual placeholders and refined XAML configurations.
- Resolved deprecated `Closing` events and improved lifecycle sequence handling.

--- a/Arcanum.UI/Arcanum.UI.csproj
+++ b/Arcanum.UI/Arcanum.UI.csproj
@@ -138,6 +138,12 @@
         <Resource Include="Assets\Logo\ArcanumForeColor.png" />
         <Resource Include="Assets\Logo\ArcanumSimplified.ico" />
         <Resource Include="Assets\Logo\ArcanumSimplified.png" />
+        <None Remove="Assets\Icons\Huge\MapFiller.png" />
+        <Resource Include="Assets\Icons\Huge\MapFiller.png" />
+        <None Remove="Assets\Icons\Huge\MapInteractionFiller.png" />
+        <Resource Include="Assets\Icons\Huge\MapInteractionFiller.png" />
+        <None Remove="Assets\Icons\Huge\SelectionDataFiller.png" />
+        <Resource Include="Assets\Icons\Huge\SelectionDataFiller.png" />
     </ItemGroup>
 
     <ItemGroup>
