Add history navigation commands and tree view styling
- Implemented undo, redo, step undo, and step redo commands in `MainWindow`.
- Added `HistoryTreeView` and `OpenHistoryWindowCommand` for accessing history logs.
- Introduced `CompactingCommandDummy` for managing compacted history nodes.
- Updated `SearchWindow` with focus and closing behavior improvements.
- Integrated `BaseTreeView.xaml` for consistent `TreeView` styling.
- Adjusted icons and UI elements for improved user experience.

--- a/Arcanum.UI/Arcanum.UI.csproj
+++ b/Arcanum.UI/Arcanum.UI.csproj
@@ -144,6 +144,10 @@
         <Resource Include="Assets\Icons\Huge\MapInteractionFiller.png" />
         <None Remove="Assets\Icons\Huge\SelectionDataFiller.png" />
         <Resource Include="Assets\Icons\Huge\SelectionDataFiller.png" />
+        <None Remove="Assets\Icons\16x16\Compacted16x16.png" />
+        <Resource Include="Assets\Icons\16x16\Compacted16x16.png" />
+        <None Remove="Assets\Icons\16x16\Uncompacted16x16.png" />
+        <Resource Include="Assets\Icons\16x16\Uncompacted16x16.png" />
     </ItemGroup>
 
     <ItemGroup>
