Add history icon to "View History" menu item and include asset in project
- Added `History16x16.png` icon to the "View History" menu item for improved visual representation.
- Updated project file to include `History16x16.png` as a resource.

--- a/Arcanum.UI/Arcanum.UI.csproj
+++ b/Arcanum.UI/Arcanum.UI.csproj
@@ -148,6 +148,8 @@
         <Resource Include="Assets\Icons\16x16\Compacted16x16.png" />
         <None Remove="Assets\Icons\16x16\Uncompacted16x16.png" />
         <Resource Include="Assets\Icons\16x16\Uncompacted16x16.png" />
+        <None Remove="Assets\Icons\16x16\History16x16.png" />
+        <Resource Include="Assets\Icons\16x16\History16x16.png" />
     </ItemGroup>
 
     <ItemGroup>
