Add error log window and improve property grid
- Introduced `ErrorLog` window with filtering and diagnostics list.
- Added new converters, such as `BoolToVisibilityConverter`, for visibility binding.
- Enhanced `PropertyGrid` with tooltips, structured templates, and a new description grid.
- Updated `MainWindow` to include a command for opening the error log window.
- Added new attributes (`IgnoreInPropertyGrid` and `CustomResetMethod`) for enhanced property grid customization.
- Included new diagnostic icons as project resources.

--- a/Arcanum.Core/Arcanum.Core.csproj
+++ b/Arcanum.Core/Arcanum.Core.csproj
@@ -16,6 +16,7 @@
   <ItemGroup>
     <Folder Include="CoreSystems\LoadingLifecycle\" />
     <Folder Include="CoreSystems\Parsing\ImageParsingUtil\" />
+    <Folder Include="GlobalStates\BackingClasses\ErrorDescriptorSettings\" />
     <Folder Include="Utils\SearchingAlgorithms\" />
   </ItemGroup>
 
