Enhance ErrorLog functionality and UI improvements
- Added `SelectedSeverity` property and changed image/icon dynamically based on severity.
- Implemented buttons to open folder and file at error position.
- Introduced styling updates for severity-based UI highlighting.
- Adjusted `ErrorLog.xaml` for better layout and read-only text boxes.
- Updated project resources to include new icons (`File20x20.png`, `FolderOpen20x20.png`).

--- a/Arcanum.UI/Arcanum.UI.csproj
+++ b/Arcanum.UI/Arcanum.UI.csproj
@@ -162,6 +162,10 @@
         <Resource Include="Assets\Icons\40x40\InfoCircle40x40.png" />
         <None Remove="Assets\Icons\40x40\CloseCircle40x40.png" />
         <Resource Include="Assets\Icons\40x40\CloseCircle40x40.png" />
+        <None Remove="Assets\Icons\20x20\File20x20.png" />
+        <Resource Include="Assets\Icons\20x20\File20x20.png" />
+        <None Remove="Assets\Icons\20x20\FolderOpen20x20.png" />
+        <Resource Include="Assets\Icons\20x20\FolderOpen20x20.png" />
     </ItemGroup>
 
     <ItemGroup>
