Add UIElementsBrowser debug window and integrate into MainWindow
- Introduced `UIElementsBrowser` for browsing and interacting with various UI components.
- Added `UIElementsBrowser.xaml` and `UIElementsBrowser.xaml.cs`.
- Registered a new command `OpenUIElementsBrowserCommand` in `MWCommands`.
- Integrated the debug window into `MainWindow` under the Debug menu.
- Updated `BaseButton` style to include a `MinHeight` property.
- Added a new icon (`WindowFrame16x16.png`) for the debug menu item.

--- a/Arcanum.UI/Arcanum.UI.csproj
+++ b/Arcanum.UI/Arcanum.UI.csproj
@@ -166,6 +166,8 @@
         <Resource Include="Assets\Icons\20x20\File20x20.png" />
         <None Remove="Assets\Icons\20x20\FolderOpen20x20.png" />
         <Resource Include="Assets\Icons\20x20\FolderOpen20x20.png" />
+        <None Remove="Assets\Icons\16x16\WindowFrame16x16.png" />
+        <Resource Include="Assets\Icons\16x16\WindowFrame16x16.png" />
     </ItemGroup>
 
     <ItemGroup>
