--- a/Arcanum.UI/Arcanum.UI.csproj
+++ b/Arcanum.UI/Arcanum.UI.csproj
@@ -34,6 +34,7 @@
     </ItemGroup>
     <ItemGroup>
         <Folder Include="Components\Helpers\" />
+        <Folder Include="Components\Models\" />
         <Folder Include="FeatureSpotlight\" />
         <Folder Include="HostUIServices\" />
     </ItemGroup>
