Refactor `FileDescriptor` and enhance location loading
- Updated `FileDescriptor` to support dependency management and added a `Dummy` placeholder for default instantiation.
- Refactored `NamedLocationLoading` into a comprehensive `LocationLoading` parsing step with enhanced file handling.
- Integrated location parsing into `ParsingStepBase` with progress tracking and error handling improvements.
- Introduced dependency-aware parsing with updates to `TopologicalSort` and `IDependencyNode`.
- Updated `MainWindow` to utilize `LocationLoading` for parsing and removed obsolete `NamedLocationLoading` logic.
- Enhanced `ParsingMaster` with file size-based weight distribution for progress calculations.
- Removed outdated test implementations and unused utility classes.
- Refined diagnostics with new `ParsingBaseStepFailure` descriptor for detailed error contexts.

--- a/Arcanum.Core/Arcanum.Core.csproj
+++ b/Arcanum.Core/Arcanum.Core.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <Folder Include="CoreSystems\LoadingLifecycle\" />
+    <Folder Include="CoreSystems\SavingSystem\Test\" />
     <Folder Include="GlobalStates\BackingClasses\ErrorDescriptorSettings\" />
     <Folder Include="Utils\SearchingAlgorithms\" />
   </ItemGroup>
