Introduce Loading Step Runner and enhance parsing utilities
- Added `RunLoadingStep` window for executing and analyzing parsing steps interactively.
- Registered `LoadingStepRunnerCommand` and integrated it into `MainWindow` Debug menu.
- Updated `ParsingStepBase` to include `GetDebugInfo` for detailed step debug information.
- Enhanced `ParsingMaster` with aggregated step durations and listing functionality.
- Refactored parsing steps to improve namespace consistency and diagnostic handling.
- Replaced `DebugParsingCommand` with `LoadingStepRunnerCommand`, removing obsolete logic.
- Added `DoublePlay30x30.png` icon for UI interaction in the step runner.

--- a/Arcanum.UI/Arcanum.UI.csproj
+++ b/Arcanum.UI/Arcanum.UI.csproj
@@ -169,6 +169,8 @@
         <Resource Include="Assets\Icons\20x20\FolderOpen20x20.png" />
         <None Remove="Assets\Icons\16x16\WindowFrame16x16.png" />
         <Resource Include="Assets\Icons\16x16\WindowFrame16x16.png" />
+        <None Remove="Assets\Icons\30x30\DoublePlay30x30.png" />
+        <Resource Include="Assets\Icons\30x30\DoublePlay30x30.png" />
     </ItemGroup>
 
     <ItemGroup>
