--- a/Arcanum.Core/Arcanum.Core.csproj
+++ b/Arcanum.Core/Arcanum.Core.csproj
@@ -33,6 +33,7 @@
   <ItemGroup>
     <PackageReference Include="JetBrains.Annotations" Version="2025.2.0" />
     <PackageReference Include="Octokit" Version="14.0.0" />
+    <PackageReference Include="Pfim" Version="0.11.3" />
   </ItemGroup>
 
 </Project>
