Add `SelectedPath` property to `ErrorLog` and integrate path sanitization
- Introduced `SelectedPath` property to bind and display the sanitized file path of the selected error.
- Implemented `SanitizePath` method in `FileManager` to process and format paths consistently.
- Updated `ErrorLog.xaml` to include a readonly text box displaying the `SelectedPath`.
- Added `ExportAsCsv20x20.png` icon for improved export button representation in the error log UI.

--- a/Arcanum.UI/Arcanum.UI.csproj
+++ b/Arcanum.UI/Arcanum.UI.csproj
@@ -171,6 +171,8 @@
         <Resource Include="Assets\Icons\16x16\WindowFrame16x16.png" />
         <None Remove="Assets\Icons\30x30\DoublePlay30x30.png" />
         <Resource Include="Assets\Icons\30x30\DoublePlay30x30.png" />
+        <None Remove="Assets\Icons\20x20\ExportAsCsv20x20.png" />
+        <Resource Include="Assets\Icons\20x20\ExportAsCsv20x20.png" />
     </ItemGroup>
 
     <ItemGroup>
