Add `DiagnosticArgsAnalyzer` and unit tests
- Introduced `DiagnosticArgsAnalyzer` for validating diagnostic arguments in Roslyn-based analyzers.
- Added `DiagnosticArgsAnalyzerTest` to ensure correct behavior for varying argument configurations.
- Updated `Arcanum.Core` and solution files to include the new analyzer.
- Enhanced UnitTests project with required dependencies for analyzer testing.

--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -12,6 +12,8 @@
 
     <ItemGroup>
         <PackageReference Include="coverlet.collector" Version="6.0.0"/>
+        <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Analyzer.Testing" Version="1.1.2" />
+        <PackageReference Include="Microsoft.CodeAnalysis.Testing.Verifiers.NUnit" Version="1.1.2" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0"/>
         <PackageReference Include="Moq" Version="4.20.72" />
         <PackageReference Include="NUnit" Version="3.14.0"/>
@@ -30,6 +32,7 @@
 
 
     <ItemGroup>
+        <ProjectReference Include="..\DiagnosticArgsAnalyzer\DiagnosticArgsAnalyzer.csproj" />
         <ProjectReference Include="..\Nexus.Analyzer\Nexus.Analyzer.csproj"
                           OutputItemType="Analyzer"
                           ReferenceOutputAssembly="false" />
