--- a/Arcanum.Core/Arcanum.Core.csproj
+++ b/Arcanum.Core/Arcanum.Core.csproj
@@ -1,39 +1,42 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net8.0-windows</TargetFramework>
-    <Nullable>enable</Nullable>
-    <UseWindowsForms>true</UseWindowsForms>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <UseWPF>true</UseWPF>
-    <ImplicitUsings>enable</ImplicitUsings>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>net8.0-windows</TargetFramework>
+        <Nullable>enable</Nullable>
+        <UseWindowsForms>true</UseWindowsForms>
+        <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+        <UseWPF>true</UseWPF>
+        <ImplicitUsings>enable</ImplicitUsings>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\Arcanum.PluginHost\Arcanum.PluginHost.csproj" />
-  </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\Arcanum.PluginHost\Arcanum.PluginHost.csproj"/>
+    </ItemGroup>
 
-  <ItemGroup>
-    <Folder Include="CoreSystems\LoadingLifecycle\" />
-    <Folder Include="CoreSystems\SavingSystem\Test\" />
-    <Folder Include="GlobalStates\BackingClasses\ErrorDescriptorSettings\" />
-    <Folder Include="Utils\SearchingAlgorithms\" />
-  </ItemGroup>
+    <ItemGroup>
+        <Folder Include="CoreSystems\LoadingLifecycle\"/>
+        <Folder Include="CoreSystems\SavingSystem\Test\"/>
+        <Folder Include="GlobalStates\BackingClasses\ErrorDescriptorSettings\"/>
+        <Folder Include="Utils\SearchingAlgorithms\"/>
+    </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\Nexus.Analyzer\Nexus.Analyzer.csproj"
-                      OutputItemType="Analyzer"
-                      ReferenceOutputAssembly="false" />
-    <ProjectReference Include="..\Nexus.Core\Nexus.Core.csproj" />
-    <ProjectReference Include="..\Nexus.SourceGen\Nexus.SourceGen.csproj"
-                      OutputItemType="Analyzer"
-                      ReferenceOutputAssembly="false" />
-  </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\Nexus.Analyzer\Nexus.Analyzer.csproj"
+                          OutputItemType="Analyzer"
+                          ReferenceOutputAssembly="false"/>
+        <ProjectReference Include="..\Nexus.Core\Nexus.Core.csproj"/>
+        <ProjectReference Include="..\Nexus.SourceGen\Nexus.SourceGen.csproj"
+                          OutputItemType="Analyzer"
+                          ReferenceOutputAssembly="false"/>
+        <ProjectReference Include="..\Analyzers.DiagnosticArgsAnalyzer\DiagnosticArgsAnalyzer.csproj" 
+                          OutputItemType="Analyzer" 
+                          ReferenceOutputAssembly="false"/>
+    </ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="JetBrains.Annotations" Version="2025.2.0" />
-    <PackageReference Include="Octokit" Version="14.0.0" />
-    <PackageReference Include="Pfim" Version="0.11.3" />
-  </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="JetBrains.Annotations" Version="2025.2.0"/>
+        <PackageReference Include="Octokit" Version="14.0.0"/>
+        <PackageReference Include="Pfim" Version="0.11.3"/>
+    </ItemGroup>
 
 </Project>
