Introduce `UIHandle` and enhance settings navigation with `NavigateToSetting`
- Added `UIHandle` class as a central registry for UI utilities and pop-up handling.
- Implemented `NavigateToSetting` method in `SettingsWindow` for direct navigation to specific settings paths.
- Introduced `PropertyPathBuilder` for resolving property paths dynamically.
- Added `IPopUpHandle` and `IUIUtils` interfaces for better abstraction and testability.
- Refactored `WindowLinkerImpl` to use `UIHandle` for managing window interactions.
- Updated `SearchableSettings` and related classes to support property-based navigation.
- Adjusted settings and error log export configurations to align with the new structure.

--- a/Arcanum.UI/Arcanum.UI.csproj
+++ b/Arcanum.UI/Arcanum.UI.csproj
@@ -27,6 +27,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\Common\Common.csproj" />
         <ProjectReference Include="..\Nexus.Analyzer\Nexus.Analyzer.csproj"
                           OutputItemType="Analyzer"
                           ReferenceOutputAssembly="false"/>
