--- a/Arcanum.API/Arcanum.API.csproj
+++ b/Arcanum.API/Arcanum.API.csproj
@@ -10,4 +10,7 @@
   <ItemGroup>
     <PackageReference Include="System.Drawing.Common" Version="8.0.0" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Common\Common.csproj" />
+  </ItemGroup>
 </Project>
