--- a/Arcanum.API/Arcanum.API.csproj
+++ b/Arcanum.API/Arcanum.API.csproj
@@ -13,4 +13,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Common\Common.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="UI\" />
+  </ItemGroup>
 </Project>
