Introduce `PopsParsing` with `Pop` and `PopType` integration
- Added `PopsParsing` for parsing and managing population data.
- Introduced `Pop` and refactored `PopType` to implement `IParseable` for dynamic parsing.
- Updated `Globals` with `PopTypes` as a dictionary.
- Enhanced `ParsingError` with new descriptors for population parsing validation.
- Added `LocationChecks` utility for location-based parsing validation.
- Extended parsing descriptors and refactored related parsing systems.
- Improved diagnostic logging in `DefaultMapPreParsingStep` and refined existing `ParsingMaster` logic.

--- a/Arcanum.Core/Arcanum.Core.csproj
+++ b/Arcanum.Core/Arcanum.Core.csproj
@@ -27,7 +27,7 @@
         <ProjectReference Include="..\Nexus.SourceGen\Nexus.SourceGen.csproj"
                           OutputItemType="Analyzer"
                           ReferenceOutputAssembly="false"/>
-        <ProjectReference Include="..\Analyzers.DiagnosticArgsAnalyzer\DiagnosticArgsAnalyzer.csproj" 
+        <ProjectReference Include="..\DiagnosticArgsAnalyzer\DiagnosticArgsAnalyzer.csproj"
                           OutputItemType="Analyzer" 
                           ReferenceOutputAssembly="false"/>
     </ItemGroup>
