--- a/DiagnosticArgsAnalyzer/DiagnosticArgsAnalyzer.csproj
+++ b/DiagnosticArgsAnalyzer/DiagnosticArgsAnalyzer.csproj
@@ -2,16 +2,14 @@
 
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
+        <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <LangVersion>latest</LangVersion>
-        <AssemblyName>DiagnosticArgsAnalyzer</AssemblyName>
-        <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+        <LangVersion>12</LangVersion>
         <EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
-        <EnableAnalyzerReleaseTracking>true</EnableAnalyzerReleaseTracking>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.14.0"/>
+        <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.14.0" />
     </ItemGroup>
 
 </Project>
