I have done a thing or two

--- a/Arcanum.UI/Arcanum.UI.csproj
+++ b/Arcanum.UI/Arcanum.UI.csproj
@@ -42,138 +42,8 @@
 
 
     <ItemGroup>
-        <None Remove="Resources\Icons\ArrowDown.png" />
-        <None Remove="Resources\Icons\ArrowUp.png" />
-        <None Remove="C#.png" />
-        <None Remove="Assets\Icons\Missing16x16.png" />
-        <Resource Include="Assets\Icons\20x20\CheckSquare20x20.png" />
-        <Resource Include="Assets\Icons\20x20\Close20x20.png" />
-        <Resource Include="Assets\Icons\20x20\CloseSquare20x20.png" />
-        <Resource Include="Assets\Icons\20x20\Eye20x20.png" />
-        <Resource Include="Assets\Icons\20x20\FullScreen20x20.png" />
-        <Resource Include="Assets\Icons\20x20\Minimize20x20.png" />
-        <Resource Include="Assets\Icons\20x20\Missing16x16.png" />
-        <Resource Include="Assets\Icons\20x20\RestoreWindow20x20.png" />
-        <Resource Include="Assets\Icons\20x20\Settings20x20.png" />
-        <Resource Include="Assets\Icons\20x20\SplashTest20x20.png" />
-        <Resource Include="Assets\Icons\40x40\LinkSquare40x40.png" />
-        <None Remove="Assets\Icons\Missing64x64.png" />
-        <None Remove="Assets\Icons\Settings14x14.png" />
-        <Resource Include="Assets\Icons\64x64\Missing64x64.png" />
-        <None Remove="Assets\Icons\Quit Full Screen.png" />
-        <None Remove="Assets\Icons\Full Screen.png" />
-        <None Remove="Assets\Icons\Minimize.png" />
-        <None Remove="Assets\Icons\Close.png" />
-        <None Remove="Assets\Icons\FullScreen.png" />
-        <None Remove="Assets\Icons\CheckSquare.png" />
-        <None Remove="Assets\Icons\CloseSquare.png" />
-        <None Remove="Assets\Icons\ArrowDown.png" />
-        <None Remove="Assets\Icons\ArrowUp.png" />
-        <None Remove="Assets\Icons\Eye20x20.png" />
-        <None Remove="Assets\Icons\ArcanumSimplified.ico" />
-        <None Remove="Assets\Images\ProvinceFileCreator1024x1024.png" />
-        <Resource Include="Assets\Icons\Tiny\ArrowDown.png" />
-        <Resource Include="Assets\Icons\Tiny\ArrowUp.png" />
-        <Resource Include="Assets\Images\Discord-Symbol-White.png" />
-        <Resource Include="Assets\Images\github_mark_white.png" />
-        <Resource Include="Assets\Images\PATREON_SYMBOL_1_WHITE_RGB.png" />
-        <Resource Include="Assets\Images\ProvinceFileCreator1024x1024.png" />
-        <None Remove="Assets\Icons\LinkSquare40x40.png" />
-        <None Remove="Assets\Icons\ArcanumForeColor.png" />
-        <None Remove="Assets\Icons\40x40\Close40x40.png" />
-        <Resource Include="Assets\Icons\40x40\Close40x40.png" />
-        <None Remove="Assets\Icons\30x30\Play30x30.png" />
-        <Resource Include="Assets\Icons\30x30\Play30x30.png" />
-        <None Remove="Assets\Icons\30x30\AddBordered30x30.png" />
-        <Resource Include="Assets\Icons\30x30\AddBordered30x30.png" />
-        <None Remove="Assets\Icons\30x30\Folder30x30.png" />
-        <Resource Include="Assets\Icons\30x30\Folder30x30.png" />
-        <None Remove="Assets\Icons\20x20\Folder20x20.png" />
-        <Resource Include="Assets\Icons\20x20\Folder20x20.png" />
-        <None Remove="Assets\Icons\20x20\VanillaIcon.png" />
-        <Resource Include="Assets\Icons\20x20\VanillaIcon.png" />
-        <None Remove="Assets\Icons\20x20\ModIcon.png" />
-        <Resource Include="Assets\Icons\20x20\ModIcon.png" />
-        <None Remove="Assets\Icons\20x20\BaseModIcon.png" />
-        <Resource Include="Assets\Icons\20x20\BaseModIcon.png" />
-        <None Remove="Assets\Icons\30x30\AddFolder30x30.png" />
-        <Resource Include="Assets\Icons\30x30\AddFolder30x30.png" />
-        <None Remove="Assets\Icons\30x30\AddFolder26x26.png" />
-        <None Remove="Assets\Icons\20x20\AddFolder20x20.png" />
-        <Resource Include="Assets\Icons\20x20\AddFolder20x20.png" />
-        <None Remove="Assets\Icons\20x20\ModAdd20x20.png" />
-        <Resource Include="Assets\Icons\20x20\ModAdd20x20.png" />
-        <None Remove="Assets\Icons\20x20\Box20x20.png" />
-        <Resource Include="Assets\Icons\20x20\Box20x20.png" />
-        <None Remove="Assets\Icons\PATREON_SYMBOL_1_WHITE_RGB.png" />
-        <None Remove="Assets\Icons\github_mark_white.png" />
-        <None Remove="Assets\Icons\Discord-Symbol-White.png" />
-        <None Remove="Assets\Icons\ArcanumSimplified.png" />
-        <None Remove="Assets\Icons\20x20\Add20x20.png" />
-        <Resource Include="Assets\Icons\20x20\Add20x20.png" />
-        <None Remove="Assets\Icons\16x16\FolderOpen16x16.png" />
-        <Resource Include="Assets\Icons\16x16\OpenFolder16x16.png" />
-        <None Remove="Assets\Icons\16x16\Close16x16.png" />
-        <Resource Include="Assets\Icons\16x16\Close16x16.png" />
-        <None Remove="Assets\Icons\16x16\Add16x16.png" />
-        <None Remove="Assets\Icons\16x16\Plus16x16.png" />
-        <Resource Include="Assets\Icons\16x16\Plus16x16.png" />
-        <None Remove="Assets\Icons\16x16\Save16x16.png" />
-        <Resource Include="Assets\Icons\16x16\Save16x16.png" />
-        <None Remove="Assets\Icons\16x16\SaveSelector16x16.png" />
-        <Resource Include="Assets\Icons\16x16\SaveSelector16x16.png" />
-        <None Remove="Assets\Icons\16x16\Settings16x16.png" />
-        <Resource Include="Assets\Icons\16x16\Settings16x16.png" />
-        <None Remove="Assets\Icons\16x16\PluginSettings16x16.png" />
-        <Resource Include="Assets\Icons\16x16\PluginSettings16x16.png" />
-        <None Remove="Assets\Icons\16x16\ReloadFile16x16.png" />
-        <Resource Include="Assets\Icons\16x16\ReloadFile16x16.png" />
-        <None Remove="Assets\Icons\16x16\ReloadFolder16x16.png" />
-        <Resource Include="Assets\Icons\16x16\ReloadFolder16x16.png" />
-        <None Remove="Assets\Icons\16x16\UndoLeftRound16x16.png" />
-        <Resource Include="Assets\Icons\16x16\Undo16x16.png" />
-        <None Remove="Assets\Icons\16x16\UndoRightRound16x16.png" />
-        <Resource Include="Assets\Icons\16x16\Redo16x16.png" />
-        <None Remove="Assets\Icons\16x16\Magnifer16x16.png" />
-        <Resource Include="Assets\Icons\16x16\Magnifer16x16.png" />
-        <Resource Include="Assets\Logo\Arcanum.png" />
-        <Resource Include="Assets\Logo\ArcanumForeColor.png" />
-        <Resource Include="Assets\Logo\ArcanumSimplified.ico" />
-        <Resource Include="Assets\Logo\ArcanumSimplified.png" />
-        <None Remove="Assets\Icons\Huge\MapFiller.png" />
-        <Resource Include="Assets\Icons\Huge\MapFiller.png" />
-        <None Remove="Assets\Icons\Huge\MapInteractionFiller.png" />
-        <Resource Include="Assets\Icons\Huge\MapInteractionFiller.png" />
-        <None Remove="Assets\Icons\Huge\SelectionDataFiller.png" />
-        <Resource Include="Assets\Icons\Huge\SelectionDataFiller.png" />
-        <None Remove="Assets\Icons\16x16\Compacted16x16.png" />
-        <Resource Include="Assets\Icons\16x16\Compacted16x16.png" />
-        <None Remove="Assets\Icons\16x16\Uncompacted16x16.png" />
-        <Resource Include="Assets\Icons\16x16\Uncompacted16x16.png" />
-        <None Remove="Assets\Icons\16x16\History16x16.png" />
-        <Resource Include="Assets\Icons\16x16\History16x16.png" />
-        <None Remove="Assets\Icons\16x16\InfoCircle16x16.png" />
-        <Resource Include="Assets\Icons\16x16\InfoCircle16x16.png" />
-        <None Remove="Assets\Icons\16x16\DangerCircle16x16.png" />
-        <Resource Include="Assets\Icons\16x16\DangerCircle16x16.png" />
-        <None Remove="Assets\Icons\16x16\CloseCircle16x16.png" />
-        <Resource Include="Assets\Icons\16x16\CloseCircle16x16.png" />
-        <None Remove="Assets\Icons\40x40\DangerCircle40x40.png" />
-        <Resource Include="Assets\Icons\40x40\DangerCircle40x40.png" />
-        <None Remove="Assets\Icons\40x40\InfoCircle40x40.png" />
-        <Resource Include="Assets\Icons\40x40\InfoCircle40x40.png" />
-        <None Remove="Assets\Icons\40x40\CloseCircle40x40.png" />
-        <Resource Include="Assets\Icons\40x40\CloseCircle40x40.png" />
-        <None Remove="Assets\Icons\20x20\File20x20.png" />
-        <Resource Include="Assets\Icons\20x20\File20x20.png" />
-        <None Remove="Assets\Icons\20x20\FolderOpen20x20.png" />
-        <Resource Include="Assets\Icons\20x20\FolderOpen20x20.png" />
-        <None Remove="Assets\Icons\16x16\WindowFrame16x16.png" />
-        <Resource Include="Assets\Icons\16x16\WindowFrame16x16.png" />
-        <None Remove="Assets\Icons\30x30\DoublePlay30x30.png" />
-        <Resource Include="Assets\Icons\30x30\DoublePlay30x30.png" />
-        <None Remove="Assets\Icons\20x20\ExportAsCsv20x20.png" />
-        <Resource Include="Assets\Icons\20x20\ExportAsCsv20x20.png" />
+        <Resource Include="Assets\**\*.png" />
+        <Resource Include="Assets\**\*.ico" />
     </ItemGroup>
 
     <ItemGroup>
