--- a/Arcanum.Core/Arcanum.Core.csproj
+++ b/Arcanum.Core/Arcanum.Core.csproj
@@ -30,6 +30,9 @@
         <ProjectReference Include="..\DiagnosticArgsAnalyzer\DiagnosticArgsAnalyzer.csproj"
                           OutputItemType="Analyzer" 
                           ReferenceOutputAssembly="false"/>
+        <ProjectReference Include="..\NUITypeRegistryGenerator\NUITypeRegistryGenerator.csproj"
+                          OutputItemType="Analyzer"
+                          ReferenceOutputAssembly="false"/>
     </ItemGroup>
 
     <ItemGroup>
