Integrate `CodeFixers` project and extend analyzer capabilities:
- Added `CodeFixers` project with initial code fix implementations, including `RangeCollectionTypeFixProvider` for resolving incorrect collection types.
- Introduced `RangeCollectionAnalyzer` in `DiagnosticArgsAnalyzer` to validate property collection types against expected specifications.
- Updated `Arcanum.Core` and solution structure to reference `CodeFixers` and new analyzers.
- Replaced `List<T>` with `ObservableRangeCollection<T>` for pops in `Location`.
- Minor cleanups and enforced strict analyzer rules with `LangVersion=12`.

--- a/Arcanum.Core/Arcanum.Core.csproj
+++ b/Arcanum.Core/Arcanum.Core.csproj
@@ -30,6 +30,9 @@
         <ProjectReference Include="..\DiagnosticArgsAnalyzer\DiagnosticArgsAnalyzer.csproj"
                           OutputItemType="Analyzer" 
                           ReferenceOutputAssembly="false"/>
+        <ProjectReference Include="..\CodeFixers\CodeFixers.csproj"
+                          OutputItemType="Analyzer" 
+                          ReferenceOutputAssembly="false"/>
         <ProjectReference Include="..\NUITypeRegistryGenerator\NUITypeRegistryGenerator.csproj"
                           OutputItemType="Analyzer"
                           ReferenceOutputAssembly="false"/>
