--- a/Arcanum.Core/Arcanum.Core.csproj
+++ b/Arcanum.Core/Arcanum.Core.csproj
@@ -36,6 +36,9 @@
         <ProjectReference Include="..\NUITypeRegistryGenerator\NUITypeRegistryGenerator.csproj"
                           OutputItemType="Analyzer"
                           ReferenceOutputAssembly="false"/>
+        <ProjectReference Include="..\ParserGenerator\ParserGenerator.csproj"
+                          OutputItemType="Analyzer"
+                          ReferenceOutputAssembly="false"/>
     </ItemGroup>
 
     <ItemGroup>
