Refactor parsing step organization:
- Reorganized parsing steps into `InGame` and `MainMenu` namespaces for better modularity.
- Added `AgeParsing` class with stub methods, integrated into descriptors.
- Adjusted file and folder structure to reflect the new namespace hierarchy.
- Updated `Globals`, `ParsingMaster`, and related dependencies for consistency.

Signed-off-by: Minnator <minnator.info@web.de>

--- a/Arcanum.Core/Arcanum.Core.csproj
+++ b/Arcanum.Core/Arcanum.Core.csproj
@@ -14,6 +14,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <Folder Include="CoreSystems\Parsing\Steps\InGame\"/>
         <Folder Include="CoreSystems\SavingSystem\Test\"/>
         <Folder Include="GlobalStates\BackingClasses\ErrorDescriptorSettings\"/>
         <Folder Include="Utils\SearchingAlgorithms\"/>
