Refactor project structure by removing NUITypeRegistryGenerator and ParserGenerator projects, and introducing SourceGens project
Signed-off-by: Minnator <minnator.info@web.de>

--- a/Arcanum.Core/Arcanum.Core.csproj
+++ b/Arcanum.Core/Arcanum.Core.csproj
@@ -34,12 +34,7 @@
         <ProjectReference Include="..\CodeFixers\CodeFixers.csproj"
                           OutputItemType="Analyzer" 
                           ReferenceOutputAssembly="false"/>
-        <ProjectReference Include="..\NUITypeRegistryGenerator\NUITypeRegistryGenerator.csproj"
-                          OutputItemType="Analyzer"
-                          ReferenceOutputAssembly="false"/>
-        <ProjectReference Include="..\ParserGenerator\ParserGenerator.csproj"
-                          OutputItemType="Analyzer"
-                          ReferenceOutputAssembly="false"/>
+        <ProjectReference Include="..\SourceGens\SourceGens.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false"/>
     </ItemGroup>
 
     <ItemGroup>
