--- a/Arcanum.UI/Arcanum.UI.csproj
+++ b/Arcanum.UI/Arcanum.UI.csproj
@@ -171,6 +171,8 @@
         <Resource Include="Assets\Icons\16x16\WindowFrame16x16.png" />
         <None Remove="Assets\Icons\30x30\DoublePlay30x30.png" />
         <Resource Include="Assets\Icons\30x30\DoublePlay30x30.png" />
+        <None Remove="MapRendering\Shaders\Triangle.hlsl" />
+        <Resource Include="MapRendering\Shaders\Triangle.hlsl" />
     </ItemGroup>
 
     <ItemGroup>
@@ -434,12 +436,15 @@
     </ItemGroup>
 
     <ItemGroup>
-        <None Remove="Assets\Icons\RestoreWindow.png"/>
+        <None Remove="Assets\Icons\RestoreWindow.png" />
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0"/>
-        <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.135"/>
+        <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
+        <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.135" />
+        <PackageReference Include="Vortice.D3DCompiler" Version="3.6.2" />
+        <PackageReference Include="Vortice.Direct3D11" Version="3.6.2" />
+        <PackageReference Include="Vortice.DXGI" Version="3.6.2" />
+        <PackageReference Include="Vortice.Wpf" Version="3.6.2" />
     </ItemGroup>
-
 </Project>
