Add smoothing functionality and integrate Vortice.Mathematics for improved geometry handling - Introduced new smoothing methods using SchneidersFitter for Bézier curve fitting - Added SmoothedPoints property to manage smoothed point data - Integrated Vortice.Mathematics package for enhanced vector operations

--- a/Arcanum.Core/Arcanum.Core.csproj
+++ b/Arcanum.Core/Arcanum.Core.csproj
@@ -35,6 +35,7 @@
     <PackageReference Include="LibTessDotNet" Version="1.1.15" />
     <PackageReference Include="Octokit" Version="14.0.0" />
     <PackageReference Include="Pfim" Version="0.11.3" />
+    <PackageReference Include="Vortice.Mathematics" Version="1.9.3" />
   </ItemGroup>
 
 </Project>
