Add code fix provider to automatically add [SaveAs] attribute and enhance FlagsEnum handling
Signed-off-by: Minnator <minnator.info@web.de>

--- a/CodeFixers/CodeFixers.csproj
+++ b/CodeFixers/CodeFixers.csproj
@@ -15,6 +15,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\DiagnosticArgsAnalyzer\DiagnosticArgsAnalyzer.csproj" />
+        <ProjectReference Include="..\SourceGens\SourceGens.csproj"/>
     </ItemGroup>
 
 </Project>
