Refactor Docs Parsing System: Replace runtime DocsObj parsing with build-time code generation
Streamlines documentation parsing by removing runtime parsing and shifting to build-time code generation. Introduces `BuildTimeCodeGeneration` models, parsing logic, and generators, and updates dependent systems accordingly.

Signed-off-by: Minnator <minnator.info@web.de>

--- a/Arcanum.Core/Arcanum.Core.csproj
+++ b/Arcanum.Core/Arcanum.Core.csproj
@@ -14,6 +14,10 @@
     </ItemGroup>
 
     <ItemGroup>
+        <Folder Include="CoreSystems\Jomini\Effects\"/>
+        <Folder Include="CoreSystems\Jomini\Scopes\"/>
+        <Folder Include="CoreSystems\Jomini\Triggers\"/>
+        <Folder Include="CoreSystems\Parsing\DocsParsing\"/>
         <Folder Include="CoreSystems\Parsing\Steps\InGame\"/>
         <Folder Include="GlobalStates\BackingClasses\ErrorDescriptorSettings\"/>
         <Folder Include="Utils\SearchingAlgorithms\"/>
