Add `ModValViewer` control and expand `NUISetting` with `ModValInstance` support
Implements a new `ModValViewer` control to handle `ModValInstance` display and functionality. Updates `NUISetting` to include `ModValInstanceSettings` for enhanced Modifier integration. Refines `.DotSettings` formatting.

Signed-off-by: Minnator <minnator.info@web.de>

--- a/Arcanum.UI/Arcanum.UI.csproj
+++ b/Arcanum.UI/Arcanum.UI.csproj
@@ -36,8 +36,8 @@
         <ProjectReference Include="..\Nexus.Core\Nexus.Core.csproj" />
     </ItemGroup>
     <ItemGroup>
-        <Folder Include="Components\Helpers\" />
         <Folder Include="Components\Models\" />
+        <Folder Include="Components\UserControls\ViewModels\"/>
         <Folder Include="FeatureSpotlight\" />
         <Folder Include="HostUIServices\" />
     </ItemGroup>
