--- a/Arcanum.UI/Arcanum.UI.csproj
+++ b/Arcanum.UI/Arcanum.UI.csproj
@@ -304,12 +304,18 @@
     </ItemGroup>
 
     <ItemGroup>
-        <None Remove="Assets\Icons\RestoreWindow.png"/>
+        <None Remove="Assets\Icons\RestoreWindow.png" />
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0"/>
-        <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.135"/>
+        <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
+        <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.135" />
+        <PackageReference Include="Vortice.D3DCompiler" Version="3.6.2" />
+        <PackageReference Include="Vortice.Direct3D11" Version="3.6.2" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <EmbeddedResource Include="DirectX\Shaders\Triangle.hlsl" />
     </ItemGroup>
 
 </Project>
