Add map tracing and rendering components; introduce LocationRenderer, MapTracing, and PolygonParsing classes, and refactor related structures for improved geometry handling

--- a/Arcanum.UI/Arcanum.UI.csproj
+++ b/Arcanum.UI/Arcanum.UI.csproj
@@ -315,7 +315,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <EmbeddedResource Include="DirectX\Shaders\Triangle.hlsl" />
+      <EmbeddedResource Include="DirectX\Shaders\ExampleTriangle.hlsl" />
     </ItemGroup>
 
 </Project>
