Add rendering enhancements and event handling for map visualization; implement mouse interactions for panning and zooming, update rendering setup to include image size, and introduce new shader for color lookup.

--- a/Arcanum.UI/Arcanum.UI.csproj
+++ b/Arcanum.UI/Arcanum.UI.csproj
@@ -318,4 +318,8 @@
       <EmbeddedResource Include="DirectX\Shaders\ExampleTriangle.hlsl" />
     </ItemGroup>
 
+    <ItemGroup>
+      <EmbeddedResource Include="DirectX\Shaders\Triangle.hlsl" />
+    </ItemGroup>
+
 </Project>
