--- a/Arcanum.UI/Arcanum.UI.csproj
+++ b/Arcanum.UI/Arcanum.UI.csproj
@@ -37,6 +37,7 @@
     </ItemGroup>
     <ItemGroup>
         <Folder Include="Components\Models\" />
+        <Folder Include="Components\UserControls\Specific\" />
         <Folder Include="Components\UserControls\ViewModels\"/>
         <Folder Include="FeatureSpotlight\" />
         <Folder Include="HostUIServices\" />
