Refactor project references to use Arcanum.SDK and update related namespaces

--- a/Arcanum.PluginHost/Arcanum.PluginHost.csproj
+++ b/Arcanum.PluginHost/Arcanum.PluginHost.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Arcanum.API\Arcanum.API.csproj" />
+      <ProjectReference Include="..\Arcanum.SDK\Arcanum.SDK.csproj"/>
   </ItemGroup>
 
 </Project>
