--- a/Arcanum.SDK/Arcanum.SDK.csproj
+++ b/Arcanum.SDK/Arcanum.SDK.csproj
@@ -16,6 +16,7 @@
         <ProjectReference Include="..\Nexus.Core\Nexus.Core.csproj"/>
     </ItemGroup>
     <ItemGroup>
+        <Folder Include="DTOs\"/>
         <Folder Include="UI\"/>
     </ItemGroup>
 </Project>
