--- a/Arcanum.UI/Arcanum.UI.csproj
+++ b/Arcanum.UI/Arcanum.UI.csproj
@@ -328,4 +328,8 @@
         <EmbeddedResource Include="DirectX\Shaders\Compute\AverageColor.hlsl"/>
     </ItemGroup>
 
+    <ItemGroup>
+        <EmbeddedResource Include="DirectX\Shaders\DrawRects.hlsl"/>
+    </ItemGroup>
+
 </Project>
